src/test/err.pas
program hello ();
var
	a,b: integer;
	int abc,;

begin
	if abc ;  then a := 0
	else a := 1;
	
	if a = 0 then b := 0;
	else b := 1;

	writeln('hello, SPL.');
end.

